syntax = "proto2";
option optimize_for = SPEED;

package ceph_usage;

message PoolUsage {
    required string name = 1;
    required uint64 num_bytes = 2;
    required uint64 num_kb = 3;
    required uint64 num_objects = 4;
    required uint64 num_object_clones = 5;
    required uint64 num_object_copies = 6;
    required uint64 num_objects_missing_on_primary = 7;
    required uint64 num_objects_unfound = 8;
    required uint64 num_objects_degraded = 9;
    required uint64 num_rd = 10;
    required uint64 num_rd_kb = 11;
    required uint64 num_wr = 12;
    required uint64 num_wr_kb = 13;
    required uint32 replication_factor = 14;
}

message ClusterUsage {
    required uint64 kb = 1;
    required uint64 kb_used = 2;
    required uint64 kb_avail = 3;
    required uint64 num_objects = 4;
    repeated PoolUsage pool_info = 5;
}
